Prepare demo to show the feature